<resources>
    <string name="app_name">随游</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="title1">主页</string>
    <string name="title2">圈子</string>
    <string name="title3">随游</string>
    <string name="title4">会话</string>
    <string name="sendMsg">M</string>
    <string name="nickname">昵称</string>
    <string name="sendNewPost">发布新帖子</string>
    <string name="collection">收藏</string>
    <string name="themes">主题</string>
    <string name="areas">地区</string>
    <string name="blankNickName">暂无称呼</string>
    <string name="blankArea">暂无地区</string>
    <string name="signature">个性签名</string>
    <string name="blankSignature">暂无个性签名</string>
    <string name="blankContent">暂无详细信息</string>
    <string name="footprint">我的足迹</string>
    <string name="route">路线</string>
    <string name="attention">关注</string>
    <string name="MyAttention">我的关注</string>
    <string name="fans">粉丝</string>
    <string name="thirdParty">绑定的第三方账号</string>
    <string name="setting">设置</string>
    <string name="personalSetting">个人设置</string>
    <string name="normalSetting">通用设置</string>
    <string name="clickHead">点击修改头像</string>
    <string name="personalInfo">个人信息</string>
    <string name="nickname_hint">请输入您的昵称</string>
    <string name="Location_hint">请输入您的所在地</string>
    <string name="trade_hint">请输入您的职业</string>
    <string name="Signature_hint">请输入您的个性签名</string>
    <string name="NewRemind">新提醒</string>
    <string name="newAt">新@我的</string>
    <string name="newComment">新评论</string>
    <string name="newReply">新回复</string>
    <string name="newAttention">新关注</string>
    <string name="post">帖子</string>
    <string name="back">返回</string>
    <string name="confirm">确认</string>
    <string name="AllPicture">所有图片</string>
    <string name="gender">性别</string>
    <string name="location">所在地</string>
    <string name="signature2">签名</string>
    <string name="feedback">反馈</string>
    <string name="send">发送</string>
    <string name="feedback_hint">请输入要反馈的内容</string>
    <string name="contactUs">联系我们</string>
    <string name="save">保存</string>
    <string name="footprint0">足迹 0</string>
    <string name="attention_other">关注TA</string>
    <string name="TwentyThree">23</string>
    <string name="clickPraise">点赞</string>
    <string name="comment">评论</string>
    <string name="complete">完成</string>
    <string name="Singapore_n">新加坡新加坡新加坡新加坡新加坡新加坡</string>
    <string name="Jeju_Island">济州岛</string>
    <string name="editor">修改</string>
    <string name="search_question">写下你的问题</string>
    <string name="question_description">问题的描叙</string>
    <string name="show_location">显示你的位置</string>
    <string name="image_theme">想个标题吧</string>
    <string name="activity_description">活动描述</string>
    <string name="picture_description">图片描述</string>
    <string name="choice_picture">请至少选择一张图片</string>
    <string name="sure_delete">确认删除</string>
    <string name="load_wait">正在加载，请稍候&#8230;</string>
    <string name="login_wait">正在登陆，请稍候&#8230;</string>
    <string name="choice_area">请选择地区</string>
    <string name="choice_theme">请选择主题</string>
    <string name="theme_is_empty">主题不能为空</string>
    <string name="area_is_empty">地区不能为空</string>
    <string name="ask_description_is_empty">问题描述不能为空</string>
    <string name="activity_description_is_empty">活动描述不能为空</string>
    <string name="your_ask_is_empty">你的问题不能为空</string>
    <string name="title_is_empty">你的标题不能为空</string>
    <string name="article_publish_success">文章发布成功</string>
    <string name="article_publish_failure">文章发布失败</string>
    <string name="UnknownArea">未知地区</string>
    <string name="title">标题</string>
    <string name="show_comments">显示评论</string>
    <string name="article_temp">文章内容在此显示</string>
    <string name="share">分享</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="group_chat">群聊</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="The_dissolution_of_chatting">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="unable_to_connect">不能连接到服务器</string>
    <string name="newchat">新建聊天</string>
    <string name="agree">同意</string>
    <string name="Group_chat">群聊:</string>
    <string name="not_download">未下载:</string>
    <string name="Please_enter_a_username">请输入用户名</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="not_add_myself">不能添加自己</string>
    <string name="This_user_is_already_your_friend">此用户已是你的好友</string>
    <string name="Add_a_friend">加个好友呗</string>
    <string name="send_successful">发送请求成功,等待对方验证</string>
    <string name="Request_add_buddy_failure">请求添加好友失败:</string>
    <string name="Network_error">网络出错</string>
    <string name="Making_sure_your_location">正在确定你的位置&#8230;</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="expression">[表情]</string>
    <string name="Removed_from_the_failure">移出失败</string>
    <string name="be_removing">正在移出&#8230;</string>
    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="unable_to_get_location">无法获取到您的位置信息!</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="you_are_group">你被群创建者从此群中移除</string>
    <string name="the_current_group">当前群聊已被群创建者解散</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="deleting">正在删除&#8230;</string>
    <string name="Delete_failed">删除失败:</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单&#8230;</string>
    <string name="Log_uploaded_successfully">日志上传成功</string>
    <string name="Log_Upload_failed">log上传失败</string>
    <string name="get_failed_please_check">获取失败,请检查网络或稍后再试</string>
    <string name="people">人)</string>
    <string name="being_added">正在添加&#8230;</string>
    <string name="is_quit_the_group_chat">正在退出群聊&#8230;</string>
    <string name="chatting_is_dissolution">正在解散群聊&#8230;</string>
    <string name="are_empty_group_of_news">正在清空群消息&#8230;</string>
</resources>