<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.minglang.suiuu.activity.PersonalActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/personalHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_launcher" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/personalHead"
                    android:layout_toRightOf="@+id/personalHead"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            style="@style/personalInfoStyle"
                            android:text="@string/nickname" />

                        <TextView
                            android:id="@+id/nickNameInfo"
                            style="@style/personalInfoStyle"
                            android:text="@string/blankNickName" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView9"
                            style="@style/personalInfoStyle"
                            android:text="@string/area" />

                        <TextView
                            android:id="@+id/areaInfo"
                            style="@style/personalInfoStyle"
                            android:text="@string/blankArea" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/personalInfoStyle"
                        android:layout_margin="5dp"
                        android:text="@string/signature" />

                    <TextView
                        android:id="@+id/signtureInfo"
                        style="@style/personalInfoStyle"
                        android:text="@string/blankSignture" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/personalInfoStyle"
                        android:layout_margin="5dp"
                        android:text="@string/footprint" />

                    <TextView
                        android:id="@+id/textView11"
                        style="@style/personalInfoStyle"
                        android:text="New Text" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        style="@style/personalInfoStyle"
                        android:layout_margin="5dp"
                        android:text="@string/attention" />

                    <TextView
                        android:id="@+id/textView13"
                        style="@style/personalInfoStyle"
                        android:text="New Text" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView14"
                        style="@style/personalInfoStyle"
                        android:layout_margin="5dp"
                        android:text="@string/fans" />

                    <TextView
                        android:id="@+id/textView15"
                        style="@style/personalInfoStyle"
                        android:text="New Text" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView16"
                        style="@style/personalInfoStyle"
                        android:layout_margin="5dp"
                        android:text="@string/thirdParty" />

                    <TextView
                        android:id="@+id/textView17"
                        style="@style/personalInfoStyle"
                        android:text="New Text" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
