<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.minglang.suiuu.activity.CollectionActivity">


    <RelativeLayout
        android:id="@+id/collectionHeadLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/collection"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/collectionBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/collectionSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/collectionLoop"
            style="@style/collectionInfoStyle"
            android:text="@string/title2" />

        <TextView
            android:id="@+id/collectionRoute"
            style="@style/collectionInfoStyle"
            android:text="@string/route" />
    </LinearLayout>

    <ImageView
        android:id="@+id/collectionSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        android:src="@drawable/slider" />

    <android.support.v4.view.ViewPager
        android:id="@+id/collectionPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>


</LinearLayout>
