<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
    <include
        layout="@layout/common_top2_layout"/>
    <LinearLayout
        android:background="@color/backgroundColor"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"

        >
        <EditText
            android:id="@+id/search_question"
            android:layout_marginTop="@dimen/layout_10dp"
            android:background="@color/white"
            android:hint="@string/search_question"
            android:layout_width="fill_parent"
            android:padding="@dimen/layout_8dp"
            android:textColorHighlight="@color/textColor"
            android:gravity="left"
            android:textSize="@dimen/layout_15sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_16dp"
            android:layout_marginRight="@dimen/layout_16dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="@dimen/layout_10dp"
            android:layout_marginLeft="@dimen/layout_16dp"
            android:layout_marginRight="@dimen/layout_16dp"
            >
            <EditText
                android:id="@+id/et_question_description"
                android:padding="@dimen/layout_8dp"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/layout_200dp"
                android:background="@color/white"
                android:gravity="left"
                android:textColor="@color/textColor"
                android:hint="@string/question_description"
                android:textSize="@dimen/layout_15sp"
                />

            </RelativeLayout>
        <GridView
            android:padding="@dimen/layout_10dp"
            android:layout_marginLeft="@dimen/layout_16dp"
            android:layout_marginRight="@dimen/layout_16dp"
            android:gravity="center"
            android:verticalSpacing="@dimen/layout_10dp"
            android:id="@+id/gv_show_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numColumns="3"
            android:scrollbars="none"
            android:background="@color/white"
            android:layout_alignBottom="@id/et_question_description"></GridView>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_5dp"
            android:layout_marginLeft="@dimen/layout_16dp"
            android:layout_marginRight="@dimen/layout_16dp"
            android:textColor="@color/textColor"
            android:text="@string/show_location"
            android:padding="@dimen/layout_8dp"
            android:background="@color/white"
            android:textSize="@dimen/layout_15sp"/>
        </LinearLayout>

</LinearLayout>